# ai-engineer-learning-hub

./: .gitignore  LICENSE  README.md  mkdocs.pdf.yml  mkdocs.yml  pyproject.toml  readnext.md  requirements-docs.txt  requirements.txt
.github/workflows/: deploy.yml
docs/: .pages  courses.md  glossary.md  index.md
docs/agents-orchestration/: .pages
docs/architecture/: .pages
docs/assets/: extra.css
docs/includes/: abbreviations.md
docs/llm-engineering/: .pages
docs/ml-platform-ops/: .pages
docs/software-design/: .pages
output/agent-protocols-mcp-and-a2a/: 1_High_Level_Overview.md  2_Key_Technical_Concepts.md  6_Measurement_Evaluation.md  README.md
output/agentic-design-patterns/: 1_High_Level_Overview.md  3_Products_Tools.md  4_Tradeoffs_Comparisons.md  6_Measurement_Evaluation.md  7_What_to_Measure_How.md  8_Interview_Questions.md  README.md
output/ai-safety-and-guardrails/: 1_High_Level_Overview.md  2_Key_Technical_Concepts.md  4_Tradeoffs_Comparisons.md  5_Use_Cases.md  7_What_to_Measure_How.md  8_Interview_Questions.md  README.md
output/context-engineering/: 2_Key_Technical_Concepts.md  4_Tradeoffs_Comparisons.md  6_Measurement_Evaluation.md  7_What_to_Measure_How.md  README.md
output/cost-optimization-ai-pipeline/: 2_Key_Technical_Concepts.md  6_Measurement_Evaluation.md  7_What_to_Measure_How.md  README.md
output/data-driven-architecture/: 5_Use_Cases.md  (+5 more)
prep_master/: cli.py  config.py  console.py  generator.py  prompts.py  writer.py
scripts/: build_docs.py
site_data/: clusters.yml  courses.yml  glossary.yml  links.yml  updates.yml
(+176 files in other folders)
